@@ -92,6 +92,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12793. Write a new group mapping service guide
     (Wei-Chiu Chuang via iwasakims)
 
+    HADOOP-12472. Make GenericTestUtils.assertExceptionContains robust.
+    (Steve Loughran via jing9)
+
   OPTIMIZATIONS
 
     HADOOP-7713. dfs -count -q should label output column (Jonathan Allen
